feat: spring core翻译至1.13.2

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -4747,13 +4747,254 @@ public static void main(String[] args) {
 
 ### 1.13.1. Bean定义配置文件
 
+Bean定义配置文件在核心容器中提供了一种机制，可以在不同环境中注册不同的beans。“environment”一词对不同用户意味着不同的事物，此功能在许多场景下很有用，包括：
+
+- 与开发环境的内存数据源相反，在QA或生产中，通过JNDI查找不同数据源。
+- 在要求性能的环境中部署应用时，注册监听基础设施。
+- 为客户A与客户B部署注册不同的自定义实现。
+
+在需要数据源的实际应用中考虑第一种用例。在测试环境中，配置可能类似于以下内容：
+
+```java
+@Bean
+public DataSource dataSource() {
+    return new EmbeddedDatabaseBuilder()
+        .setType(EmbeddedDatabaseType.HSQL)
+        .addScript("my-schema.sql")
+        .addScript("my-test-data.sql")
+        .build();
+}
+```
+
+现在，考虑如何将该应用程序部署到QA或生产环境中，假设该应用程序的数据源已在生产应用程序服务器的JNDI目录中注册，我们的dataSource现在看起来像以下列表：
+
+```java
+@Bean(destroyMethod="")
+public DataSource dataSource() throws Exception {
+    Context ctx = new InitialContext();
+    return (DataSource) ctx.lookup("java:comp/env/jdbc/datasource");
+}
+```
+
+问题是如何根据当前环境在使用这两个变体之间进行切换。随着时间的流逝，Spring用户已经设计了多种方法来完成此操作，通常取决于系统环境变量和XML \<import/\>语句的组合，其中包含${placeholder}标记，这些标记可以根据环境变量值正确解析配置文件。Bean定义配置文件是为此问题提供解决方案的核心容器功能。
+
+如果我们概括了前述特定环境Bean定义的用例，则最终需要在正确的上下文中注册正确的bean定义。您可能会说，您想在场景A、B中注册不同的bean配置文件。我们首先更新配置以反映这一需求。
+
+**使用@Profile**
+
+[`@Profile`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/annotation/Profile.html)表明当一个或多个指定的配置文件处于活动状态时，组件有资格进行注册。使用前面的示例，我们可以按以下方式重写dataSource配置：
+
+```java
+@Configuration
+@Profile("development")
+public class StandaloneDataConfig {
+
+    @Bean
+    public DataSource dataSource() {
+        return new EmbeddedDatabaseBuilder()
+            .setType(EmbeddedDatabaseType.HSQL)
+            .addScript("classpath:com/bank/config/sql/schema.sql")
+            .addScript("classpath:com/bank/config/sql/test-data.sql")
+            .build();
+    }
+}
+```
+
+```java
+@Configuration
+@Profile("production")
+public class JndiDataConfig {
+
+    @Bean(destroyMethod="")
+    public DataSource dataSource() throws Exception {
+        Context ctx = new InitialContext();
+        return (DataSource) ctx.lookup("java:comp/env/jdbc/datasource");
+    }
+}
+```
+
+> :information_source:如前所述，使用@Bean方法，您通常会选择使用spring的JndiTemplate/JndiLocatorDelegatehe helpers或直接使用JNDI InitialContext，而不是JndiObjectFactoryBean（强制你声明返回类型为FactoryBean类型）。
+
+配置文件字符串可能包含一个简单的配置文件名称（例如，production）或配置文件表达式。配置文件表达式允许表达更复杂的配置文件逻辑（例如，production & us-east）。配置文件表达式支持以下操作：
+
+- !：配置文件的逻辑“非”
+- &：配置文件的逻辑“与”
+- |：配置文件的逻辑“或”
+
+> :information_source:您不能不适用括号就混合&和|操作。例如，production & us-east | eu-central不是有效的表达式。它必须表示为production & (us-east | eu-central)。
+
+您可以将@Profile用作[元注解](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-meta-annotations)，以创建自定义的注解。以下示例定义了自定义@Production注解，可以作为@Profile("production")的直接替换：
+
+```java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Profile("production")
+public @interface Production {
+}
+```
 
 
 
+> :bulb:如果用@Profile标记@Configuration类，则除非一个或多个指定的配置文件处于活动状态，否则与该类关联的所有@Bean方法和@Import注解都会忽略。如果用@Profile({"p1", "p2"})标记@Component或@Configuration类，则该类不会被注册或处理，除非激活了配置文件'p1'或'p2'。如果给定的配置文件有非操作(!)的前缀，则只有在配置文件不被激活的情况下才会注册带注解的元素。例如，给定的@Profile({"p1", "!p2"})，如果配置文件'p1'处于活动状态或配置文件'p2'未被活动，则会处理注册。
+
+@Profile也可以在方法级别声明，仅包含一个配置类的一个特定bean（例如，对于特定bean的替代变体），如下示例显示：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean("dataSource")
+    @Profile("development") //standaloneDataSource 仅在development 配置文件中可用
+    public DataSource standaloneDataSource() {
+        return new EmbeddedDatabaseBuilder()
+            .setType(EmbeddedDatabaseType.HSQL)
+            .addScript("classpath:com/bank/config/sql/schema.sql")
+            .addScript("classpath:com/bank/config/sql/test-data.sql")
+            .build();
+    }
+
+    @Bean("dataSource")
+    @Profile("production")  //jndiDataSource  仅在production 配置文件中可用
+    public DataSource jndiDataSource() throws Exception {
+        Context ctx = new InitialContext();
+        return (DataSource) ctx.lookup("java:comp/env/jdbc/datasource");
+    }
+}
+```
+
+> :information_source:@Bean方法上使用的@Profile，可能会适用特殊情况：在同一Java方法名称的重载@Bean方法（类似于构造函数的重载）的情况下，@Profile需要在所有重载方法上一致地声明。如果不一致，则仅在重载方法中首次声明的条件才重要。因此，@Profile不能用于选择具有特定参数签名的重载方法。同一bean的所有工厂方法在创建时遵循Spring的构造机制。
+>
+> 如果要定义具有不同配置文件条件的替代bean，使用@Bean名称属性指向同一bean名称的不同Java方法名称。如果参数签名都是相同的（例如，所有变体都有无参工厂的方法），这是在有效的Java类中代表这种排列的唯一方法（由于只能有一种特定名称和参数签名的方法）。
+
+**XML Bean定义配置文件**
+
+XML对应物是\<beans\>元素的profile属性。我们的前面示例配置可以在两个XML文件中重写，如下：
+
+```java
+<beans profile="development"
+    xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:jdbc="http://www.springframework.org/schema/jdbc"
+    xsi:schemaLocation="...">
+
+    <jdbc:embedded-database id="dataSource">
+        <jdbc:script location="classpath:com/bank/config/sql/schema.sql"/>
+        <jdbc:script location="classpath:com/bank/config/sql/test-data.sql"/>
+    </jdbc:embedded-database>
+</beans>
+```
+
+```xml
+<beans profile="production"
+    xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:jee="http://www.springframework.org/schema/jee"
+    xsi:schemaLocation="...">
+
+    <jee:jndi-lookup id="dataSource" jndi-name="java:comp/env/jdbc/datasource"/>
+</beans>
+```
+
+也可以避免在同一个文件中拆分和嵌套\<beans/\>元素，如下例所示：
+
+```xml
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xmlns:jdbc="http://www.springframework.org/schema/jdbc"
+    xmlns:jee="http://www.springframework.org/schema/jee"
+    xsi:schemaLocation="...">
+
+    <!-- other bean definitions -->
+
+    <beans profile="development">
+        <jdbc:embedded-database id="dataSource">
+            <jdbc:script location="classpath:com/bank/config/sql/schema.sql"/>
+            <jdbc:script location="classpath:com/bank/config/sql/test-data.sql"/>
+        </jdbc:embedded-database>
+    </beans>
+
+    <beans profile="production">
+        <jee:jndi-lookup id="dataSource" jndi-name="java:comp/env/jdbc/datasource"/>
+    </beans>
+</beans>
+```
+
+spring-bean.xsd已被限制，以允许仅作为文件中的最后一个元素。这应该有助于提供灵活性，而不会在XML文件中产生混乱。
+
+> :information_source:XML对应物不支持前面描述的配置文件表达式。但是，有可能使用!操作符排除一个配置文件。如下示例所示，也可以通过嵌套配置文件来应用逻辑“与”：
+>
+> ```xml
+> <beans xmlns="http://www.springframework.org/schema/beans"
+>     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+>     xmlns:jdbc="http://www.springframework.org/schema/jdbc"
+>     xmlns:jee="http://www.springframework.org/schema/jee"
+>     xsi:schemaLocation="...">
+> 
+>     <!-- other bean definitions -->
+> 
+>     <beans profile="production">
+>         <beans profile="us-east">
+>             <jee:jndi-lookup id="dataSource" jndi-name="java:comp/env/jdbc/datasource"/>
+>         </beans>
+>     </beans>
+> </beans>
+> ```
+>
+> 在前面的示例中，如果production和us-east配置文件均处于活动状态，则dataSource被暴露。
+
+**激活配置文件**
+
+现在我们已经更新了配置，我们仍然需要指示spring哪个配置文件被激活。如果我们立即启动示例应用程序，我们会看到一个NoSuchBeanDefinitionException抛出，因为容器找不到名为dataSource的bean。
+
+激活配置文件可以通过多种方式完成，但最直接的是通过应用程序上下文ApplicationContext中可用的Environment API进行编程进行操作。如以下示例显示：
+
+```java
+AnnotationConfigApplicationContext ctx = new AnnotationConfigApplicationContext();
+ctx.getEnvironment().setActiveProfiles("development");
+ctx.register(SomeConfig.class, StandaloneDataConfig.class, JndiDataConfig.class);
+ctx.refresh();
+```
+
+此外，您还可以通过spring.profiles.active属性声明激活配置文件，该属性可以通过系统环境变量，JVM系统属性，web.xml中的servlet  Context参数，甚至作为JNDI中的条目来指定(参考[`PropertySource` Abstraction](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans-property-source-abstraction))。在集成测试中，可以使用spring-test模块中的@ActiveProfiles来激活配置文件（参考 [context configuration with environment profiles](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/testing.html#testcontext-ctx-management-env-profiles)）。
+
+请注意，配置文件不是一个“或者”命题。您可以一次激活多个配置文件。以编程方式，您可以为setActiveProfiles()方法提供多个配置文件名称，该方法接受String…参数。以下示例激活了多个配置文件：
+
+```java
+ctx.getEnvironment().setActiveProfiles("profile1", "profile2");
+```
+
+声明地，spring.profiles.active可以接受逗号分隔的配置文件名称列表，如以下示例所示：
+
+```properties
+ -Dspring.profiles.active="profile1,profile2"
+```
+
+**默认配置文件**
+
+默认配置文件表示默认情况下启用的配置文件。考虑以下示例：
+
+```java
+@Configuration
+@Profile("default")
+public class DefaultDataConfig {
+
+    @Bean
+    public DataSource dataSource() {
+        return new EmbeddedDatabaseBuilder()
+            .setType(EmbeddedDatabaseType.HSQL)
+            .addScript("classpath:com/bank/config/sql/schema.sql")
+            .build();
+    }
+}
+```
+
+如果没有具体的配置文件，dataSource也被创建。您可以将其视为为一个或多个bean提供默认定义的一种方式。如果启用了任何配置文件，则不会使用默认配置文件。
+
+您可以通过在Environment上使用setDefaultProfiles()或使用spring.profiles.default属性来更改默认配置文件的名称。
 
 
 
-
+### 1.13.2. `PropertySource` 抽象
 
 
 
