feat: spring core翻译至1.15.1

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -4996,6 +4996,149 @@ public class DefaultDataConfig {
 
 ### 1.13.2. `PropertySource` 抽象
 
+Spring的Environment抽象提供了有关属性源的可配置层次结构的搜索操作。考虑以下代码：
+
+```java
+ApplicationContext ctx = new GenericApplicationContext();
+Environment env = ctx.getEnvironment();
+boolean containsMyProperty = env.containsProperty("my-property");
+System.out.println("Does my environment contain the 'my-property' property? " + containsMyProperty);
+```
+
+在前面的片段中，我们看到了一种高级方法，询问spring是否为当前环境定义了my-property属性。为了回答这个问题，Environment对象对一组[`PropertySource`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/core/env/PropertySource.html) 对象进行搜索。PropertySource是任何键值对源的简单抽象,Spring的[`StandardEnvironment`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/core/env/StandardEnvironment.html) 使用两个PropertySource 配置--一个代表JVM系统属性集（System.getProperties()），另一个代表一个代表系统环境变量集（System.getenv()）。
+
+> :information_source:这些默认的属性源是StandardEnvironment，用于独立应用。[`StandardServletEnvironment`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/web/context/support/StandardServletEnvironment.html)填充了其他默认属性源，包括servlet配置和servlet上下文参数。它可以选择启用[`JndiPropertySource`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/jndi/JndiPropertySource.html)。有关详细信息，请参见Javadoc。
+
+具体而言，当您使用StandardEnvironment时，如果在运行时出现了my-property系统属性或my-property环境变量，则调用env.containsProperty("my-property")将返回true。
+
+> :bulb:执行的搜索是分层的。默认情况下，系统属性优先于环境变量。因此，如果my-property属性在两个地方都设值了，在调用env.getProperty("my-property")时，将返回系统属性值“ wins”。请注意，属性值不会合并，而是完全被优先的条目覆盖。
+>
+> 对于StandardServletEnvironment，完整的层次结构如下，优先级高的在前：
+>
+> 1. ServletConfig参数（如果适用，例如，在DispatcherServlet上下文的情况下）
+> 2. ServletContext参数（web.xml上下文entry）
+> 3. JNDI环境变量（java:comp/env/）
+> 4. JVM系统属性（-D命令行参数）
+> 5. JVM系统环境（操作系统环境变量）
+
+最重要的是，整个机制都是可配置的。也许您有一个自定义的属性来源，要将其集成到此搜索中。为此，实现并实例化您自己的PropertySource，并将其添加到当前Environment的PropertySources集中。如下所示：
+
+```java
+ConfigurableApplicationContext ctx = new GenericApplicationContext();
+MutablePropertySources sources = ctx.getEnvironment().getPropertySources();
+sources.addFirst(new MyPropertySource());
+```
+
+在前面的代码中，在搜索中添加了MyPropertySource的优先级。如果它包含my-property属性，该属性将被检测并返回。[`MutablePropertySources`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/core/env/MutablePropertySources.html)API暴露了许多方法，这些方法允许精确操纵属性源。
+
+### 1.13.3. 使用`@PropertySource`
+
+[`@PropertySource`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/annotation/PropertySource.html)提供了一种方便且声明的机制，可以在spring Environment中添加PropertySource。
+
+给定一个名为app.properties的文件，其中包含键值对testbean.name = myTestBean，以下@Configuration类使用@PropertySource，在调用testBean.getName()时返回myTestBean：
+
+```java
+@Configuration
+@PropertySource("classpath:/com/myco/app.properties")
+public class AppConfig {
+
+    @Autowired
+    Environment env;
+
+    @Bean
+    public TestBean testBean() {
+        TestBean testBean = new TestBean();
+        testBean.setName(env.getProperty("testbean.name"));
+        return testBean;
+    }
+}
+```
+
+@PropertySource资源位置中存在的任何${…}占位符都可以根据环境中已注册的源解析，如以下示例显示：
+
+```java
+@Configuration
+@PropertySource("classpath:/com/${my.placeholder:default/path}/app.properties")
+public class AppConfig {
+
+    @Autowired
+    Environment env;
+
+    @Bean
+    public TestBean testBean() {
+        TestBean testBean = new TestBean();
+        testBean.setName(env.getProperty("testbean.name"));
+        return testBean;
+    }
+}
+```
+
+假设my.placeholder存在于已经注册的属性源之一（例如，系统属性或环境变量）中，则占位符会被解析为相应的值，如果没有，则将default/path用作默认值。如果未指定默认值且无法解析属性，则会抛出IllegalArgumentException。
+
+> :information_source:根据Java 8，@PropertySource注释是可重复的。但是，所有此类@PropertySource都需要在同一级别上，直接在配置类或同一自定义注解中的元注解处声明。不建议混合直接注解和元注解，因为直接注解会有效地覆盖元注解。
+
+### 1.13.4. 语句中的占位符解析
+
+从历史上看，只有针对JVM系统属性或环境变量，可以解析占位符。但现在不是了。由于Environment抽象是在整个容器中集成的，因此很容易通过它来解析占位符。这意味着您可以以任何你喜欢的方式配置解析方案。您可以更改通过系统属性和环境变量进行搜索的优先级，或者完全删除它们。你也可以适当地添加自己的属性源。
+
+具体而言，无论customer属性如何定义，只要在Environment中可用，以下声明都可以使用：
+
+```xml
+<beans>
+    <import resource="com/bank/service/${customer}-config.xml"/>
+</beans>
+```
+
+## 1.14. 注册`LoadTimeWeaver`
+
+Spring使用LoadTimeWeaver在将类加载到Java Virtual Machine（JVM）时作动态转换。
+
+要启用load-time weaving，您可以将@EnableLoadTimeWeaving添加到您的任一@Configuration类中，如以下示例所示：
+
+```java
+@Configuration
+@EnableLoadTimeWeaving
+public class AppConfig {
+}
+```
+
+另外，对于XML配置，您可以使用context:load-time-weaver元素：
+
+```xml
+<beans>
+    <context:load-time-weaver/>
+</beans>
+```
+
+一旦配置为ApplicationContext，该ApplicationContext中的任何bean都可以实现LoadTimeWeaverAware，从而接收到 load-time weaver实例的引用。这对于组合 [Spring的JPA支持](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/data-access.html#orm-jpa) 很有用，因为在JPA类转换中load-time weaving可能是必要的。详情可参考[`LocalContainerEntityManagerFactoryBean`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/orm/jpa/LocalContainerEntityManagerFactoryBean.html) javadoc。有关AspectJ load-time weaving的更多信息，参考[Load-time Weaving with AspectJ in the Spring Framework](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-aj-ltw)。
+
+## 1.15. `ApplicationContext`的附加功能
+
+如[前述章节简介](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#beans)中所述，org.springframework.beans.factory软件包为管理和操纵bean（包括以程序化的方式）提供了基本功能。org.springframework.context软件包添加了[`ApplicationContext`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/ApplicationContext.html) 接口，它扩展了BeanFactory接口，除了扩展其他接口以在更面向应用程序框架的样式中提供其他功能。许多人以完全声明的方式使用ApplicationContext，甚至没有以编程方式创建它，而是依靠支持类（例如ContextLoader）自动实例化ApplicationContext作为Java EE Web应用程序的正常启动过程的一部分。为了在更面向框架的样式中增强BeanFactory功能，context 包还提供了以下功能：
+
+- 通过MessageSource接口访问i18n风格中的消息。
+- 通过ResourceLoader接口访问资源，例如URL和文件。
+- 事件发布，即通过使用ApplicationEventPublisher接口来实现ApplicationListener接口的bean。
+- 多个（分层）上下文的加载，让每个上下文都集中在一个特定层上，例如应用程序的Web层，通过HierarchicalBeanFactory接口
+
+### 1.15.1. 使用`MessageSource`国际化
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
