feat:spring core翻译至1.15.2

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -5123,27 +5123,116 @@ public class AppConfig {
 
 ### 1.15.1. 使用`MessageSource`国际化
 
+ApplicationContext接口继承一个称为MessageSource的接口，因此提供了国际化（“i18n”）功能。Spring还提供了HierarchicalMessageSource接口，可以分层解析消息。这些接口共同为Spring解析消息提供了基础。这些接口中的方法包括：
 
+- String getMessage(String code, Object[] args, String default, Locale loc)：从MessageSource检索消息的基本方法。当未找到指定语言环境的消息时，使用默认消息。使用标准库提供的MessageFormat功能，传递的任何参数将被替换。
+- String getMessage(String code, Object[] args, Locale loc)：本质上与上一个方法相同，但有一个区别：没有指定默认消息。如果找不到该消息，则会抛出一个NoSuchMessageException。
+- String getMessage(MessageSourceResolvable resolvable, Locale locale)：前面方法中使用的所有属性包装在名为MessageSourceResolvable的类中。
 
+当ApplicationContext被加载时，它会自动搜索上下文中定义的MessageSource。改bean必须具名为messageSource。如果找到了这样的bean，则将所有对先前方法的调用都委派给了消息源。如果找不到消息源，则ApplicationContext尝试去父容器寻找。如果ApplicationContext找不到任何消息源，则实例化了一个空DelegatingMessageSource，以便能够接受上述方法的调用。
 
+Spring提供了两个MessageSource实现，ResourceBundleMessageSource和StaticMessageSource。两者都实现了HierarchicalMessageSource，以便进行嵌套消息传递。一般很少使用StaticMessageSource，但提供了将消息添加到源的程序化方法。以下示例显示了ResourceBundleMessageSource：
 
+```xml
+<beans>
+    <bean id="messageSource"
+            class="org.springframework.context.support.ResourceBundleMessageSource">
+        <property name="basenames">
+            <list>
+                <value>format</value>
+                <value>exceptions</value>
+                <value>windows</value>
+            </list>
+        </property>
+    </bean>
+</beans>
+```
 
+该示例假设您有三个称为format，exceptions和windows的资源捆绑包在您的类路径中定义。解析消息的任何请求都是以JDK标准的方式通过ResourceBundle对象来处理。就示例而言，假设上述两个资源捆绑文件的内容如下：
 
+```properties
+   # in format.properties
+    message=Alligators rock!
+```
 
+```properties
+ # in exceptions.properties
+    argument.required=The {0} argument is required.
+```
 
+下一个示例显示了运行MessageSource功能的程序。请记住，所有ApplicationContext也是MessageSource的实现，因此可以将其转型为MessageSource接口。
 
+```java
+public static void main(String[] args) {
+    MessageSource resources = new ClassPathXmlApplicationContext("beans.xml");
+    String message = resources.getMessage("message", null, "Default", Locale.ENGLISH);
+    System.out.println(message);
+    //输入Alligators rock!
+}
+```
 
+总而言之，MessageSource是在名为beans.xml的文件中定义的，beans.xml在根类路径中。messageSource通过basenames引用大量资源包。列表中传递给basenames属性的三个文件（format.properties`, `exceptions.properties，windows.properties）存在于跟类路径中。
 
+下一个示例显示传递给消息查找的参数。这些参数被转换为字符串对象，并在查找消息中插入占位符。
 
+```xml
+<beans>
 
+    <!-- this MessageSource is being used in a web application -->
+    <bean id="messageSource" class="org.springframework.context.support.ResourceBundleMessageSource">
+        <property name="basename" value="exceptions"/>
+    </bean>
 
+    <!-- lets inject the above MessageSource into this POJO -->
+    <bean id="example" class="com.something.Example">
+        <property name="messages" ref="messageSource"/>
+    </bean>
 
+</beans>
+```
 
+```java
+public class Example {
 
+    private MessageSource messages;
 
+    public void setMessages(MessageSource messages) {
+        this.messages = messages;
+    }
 
+    public void execute() {
+        String message = this.messages.getMessage("argument.required",
+            new Object [] {"userDao"}, "Required", Locale.ENGLISH);
+        System.out.println(message);
+        //输出The userDao argument is required.
+    }
+}
+```
 
+关于国际化("i18n")，Spring的各种MessageSource实现遵循与标准JDK ResourceBundle相同的本地化方案和回调规则。简而言之，继续使用前面定义的示例messageSource，如果您想解决针对英国（en-GB）语言环境的消息，则分别创建称为format_en_GB.properties，exceptions_en_GB.properties和windows_en_GB.properties的文件。
 
+通常，本地化方案由应用程序的周围环境管理。在下面的示例中，手动指定了（英国）消息的本地化：
+
+```properties
+# in exceptions_en_GB.properties
+argument.required=Ebagum lad, the ''{0}'' argument is required, I say, required.
+```
+
+```java
+public static void main(final String[] args) {
+    MessageSource resources = new ClassPathXmlApplicationContext("beans.xml");
+    String message = resources.getMessage("argument.required",
+        new Object [] {"userDao"}, "Required", Locale.UK);
+    System.out.println(message);
+    //输出Ebagum lad, the 'userDao' argument is required, I say, required.
+}
+```
+
+您还可以使用MessageSourceAware接口来获取对已定义的任何MessageSource的引用。ApplicationContext中实现了MessageSourceAware接口的bean在创建和配置时，会和应用程序上下文的MessageSource一起注入。
+
+> :information_source:作为ResourceBundleMessageSource的替代方案，Spring提供了ReloadableResourceBundleMessageSource类。该变体支持相同的捆绑文件格式，但比基于标准JDK的ResourceBundleMessageSource实现更灵活。特别是，它允许从任何Spring的资源位置（不仅是类路径）读取文件，并支持捆绑属性文件的热加载（在有效地缓存它们之间）。有关详细信息，请参见[`ReloadableResourceBundleMessageSource`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/support/ReloadableResourceBundleMessageSource.html) Javadoc。
+
+### 1.15.2 标准和自定义事件
 
 
 
