feat: srping core翻译至1.15.3

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -5234,6 +5234,248 @@ public static void main(final String[] args) {
 
 ### 1.15.2 标准和自定义事件
 
+ApplicationEvent类和ApplicationListener接口提供了应用程序中的事件处理。如果一个实现ApplicationListener的bean部署到上下文中，每次一个ApplicationEvent发布到ApplicationContext中，该bean就会被通知。本质上，这就是标准的观察者模式。
+
+> 从Spring4.2开始，事件基础架构已得到显着改进，并提供了 [基于注解的模型](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#context-functionality-events-annotation)以及发布任何任意事件的能力（也就是说，事件对象不必须继承ApplicationEvent）。当那样的对象被发布时，Spring自动将其包装在事件中。
+
+下表描述了Spring提供的标准事件：
+
+| 事件                       | 说明                                                         |
+| -------------------------- | ------------------------------------------------------------ |
+| ContextRefreshedEvent      | ApplicationContext被初始化或刷新时发布（例如，使用ConfigurableApplicationContext接口的refresh()方法）。在这里，“初始化”意味着所有bean都被加载，后置处理器bean被检测并激活，单例已预先实例化，并且ApplicationContext对象已准备就绪。只要上下文尚未关闭，就可以多次触发刷新，只要选择的ApplicationContext实际上支持这种“热”刷新。例如，XmlWebApplicationContext支持热刷新，但GenericApplicationContext不支持。 |
+| ContextStartedEvent        | 调用ConfigurableApplicationContext接口的start()方法启动ApplicationContext时发布。在这里，“开始”意味着所有生命周期bean都会收到明确的开始信号。通常，此信号在显示停止后用于重新启动bean，但也可以用于启动尚未配置为autostart的组件。例如，尚未开始初始化的组件。 |
+| ContextStoppedEvent        | 调用ConfigurableApplicationContext接口的stop()方法停止ApplicationContext时发布。在这里，“停止”意味着所有生命周期bean都会收到明确的停止信号。停止的上下文可能通过调用start()重启。 |
+| ContextClosedEvent         | 调用ConfigurableApplicationContext接口的close()方法或通过JVM关闭hook关闭ApplicationContext时发布。在这里，“关闭”意味着所有单例bean将被销毁。一旦上下文被关闭，它就到了生命周期的尽头，无法刷新或重新启动。 |
+| RequestHandledEvent        | 一个特定于web的事件告诉所有bean，已经服务了HTTP请求。请求完成后发布此事件。此事件仅适用于使用Spring的DispatcherServlet的Web应用程序。 |
+| ServletRequestHandledEvent | 添加特定于Servlet的上下文信息的RequestHandledEvent的子类。   |
+
+您还可以创建和发布自己的自定义事件。以下示例显示了一个简单的类，该类继承了ApplicationEvent：
+
+```java
+public class BlockedListEvent extends ApplicationEvent {
+
+    private final String address;
+    private final String content;
+
+    public BlockedListEvent(Object source, String address, String content) {
+        super(source);
+        this.address = address;
+        this.content = content;
+    }
+
+    // accessor and other methods...
+}
+```
+
+调用ApplicationEventPublisher的publishEvent()方法发布自定义ApplicationEvent。通常，这是通过创建一个实现ApplicationEventPublisherAware接口的类并将其注册为Spring bean来完成的。以下示例显示了这样的类：
+
+```java
+public class EmailService implements ApplicationEventPublisherAware {
+
+    private List<String> blockedList;
+    private ApplicationEventPublisher publisher;
+
+    public void setBlockedList(List<String> blockedList) {
+        this.blockedList = blockedList;
+    }
+
+    public void setApplicationEventPublisher(ApplicationEventPublisher publisher) {
+        this.publisher = publisher;
+    }
+
+    public void sendEmail(String address, String content) {
+        if (blockedList.contains(address)) {
+            publisher.publishEvent(new BlockedListEvent(this, address, content));
+            return;
+        }
+        // send email...
+    }
+}
+```
+
+在配置时，spring容器检测到EmailService实现了ApplicationEventPublisherAware并自动调用setApplicationEventPublisher()。实际上，传递的参数是Spring容器本身。你正在通过其ApplicationEventPublisher接口与应用程序上下文进行交互。
+
+要接收自定义ApplicationEvent，您可以创建一个实现ApplicationListener的类并将其注册为Spring Bean。以下示例显示了这样的类：
+
+```java
+public class BlockedListNotifier implements ApplicationListener<BlockedListEvent> {
+
+    private String notificationAddress;
+
+    public void setNotificationAddress(String notificationAddress) {
+        this.notificationAddress = notificationAddress;
+    }
+
+    public void onApplicationEvent(BlockedListEvent event) {
+        // notify appropriate parties via notificationAddress...
+    }
+}
+```
+
+请注意，ApplicationListener通常使用自定义事件的类型（上一个示例中是BlockedListEvent）进行参数化。这意味着onApplicationEvent()方法可以保持类型安全，避免了向下转型。您可以根据需要注册尽可能多的事件监听，但请注意，**默认情况下，事件监听同步接收到事件。这意味着publishEvent()方法会阻塞直到所有监听器完成事件的处理。这种同步和单线程方法的优点之一是，当监听器接收事件时，如果事务上下文可用，它在发布者的事务上下文中运行。**如果要执行事件发布的另一种策略，请参见Spring的[`ApplicationEventMulticaster`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/event/ApplicationEventMulticaster.html) 接口和[`SimpleApplicationEventMulticaster`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/context/event/SimpleApplicationEventMulticaster.html) 实现以获取配置选项。
+
+以下示例显示了用于注册和配置上述每个类的bean定义：
+
+```java
+<bean id="emailService" class="example.EmailService">
+    <property name="blockedList">
+        <list>
+            <value>known.spammer@example.org</value>
+            <value>known.hacker@example.org</value>
+            <value>john.doe@example.org</value>
+        </list>
+    </property>
+</bean>
+
+<bean id="blockedListNotifier" class="example.BlockedListNotifier">
+    <property name="notificationAddress" value="blockedlist@example.org"/>
+</bean>
+```
+
+当调用sendEmail()方法时，如果有任何电子邮件应该被拦截，则会发布BlockedListEvent类型的自定义事件。blockedListNotifierBean注册为ApplicationListener并接收BlockedListEvent，此时它可以通知各接收方。
+
+> :information_source:Spring的事件机制设计用于在同一应用程序上下文中bean之间的简单通信。但是，对于更复杂的企业集成需求，单独维护的[Spring Integration](https://projects.spring.io/spring-integration/)为构建轻量，面向模式的，事件驱动的架构提供了完整的支持，这些架构建立在众所周知的Spring编程模型上。
+
+**基于注解的事件监听**
+
+从spring 4.2开始，您可以使用@EventListener在任何Spring bean的公共方法上注册事件侦听器。BlockedListNotifier可以按以下方式重写：
+
+```java
+public class BlockedListNotifier {
+
+    private String notificationAddress;
+
+    public void setNotificationAddress(String notificationAddress) {
+        this.notificationAddress = notificationAddress;
+    }
+
+    @EventListener
+    public void processBlockedListEvent(BlockedListEvent event) {
+        // notify appropriate parties via notificationAddress...
+    }
+}
+```
+
+方法签名再次声明了它监听的事件类型，但是这次具有更灵活的名称，而无需实现特定的侦听器接口。只要实际事件类型可以在其实现层次结构中解析您的泛型参数，就可以通过泛型缩小事件类型。
+
+如果您的方法应监听几个事件，或者您根本不用参数定义它，则事件类型也可以在注释本身上指定。以下示例显示了如何做：
+
+```java
+@EventListener({ContextStartedEvent.class, ContextRefreshedEvent.class})
+public void handleContextStart() {
+    // ...
+}
+```
+
+还可以通过用使用[`SpEL` 表达式](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#expressions) 的condition属性来添加其他运行时过滤，该属性应匹配特定事件。
+
+下面的示例显示，只有在事件的content属性等于my-event时，才调用发布事件：
+
+```java
+@EventListener(condition = "#blEvent.content == 'my-event'")
+public void processBlockedListEvent(BlockedListEvent blockedListEvent) {
+    // notify appropriate parties via notificationAddress...
+}
+```
+
+每个SpEL表达式都会根据专用上下文进行评估。下表列出了可用于上下文的项目，以便您可以将其用于有条件的事件处理：
+
+| 名称     | 位置       | 描述                                                         | 示例                                                         |
+| -------- | ---------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| Event    | 根对象     | 实际ApplicationEvent。                                       | #root.event` 或`event                                        |
+| 参数数组 | 根对象     | 用于调用该方法的参数（作为对象数组）。                       | ＃root.args或args;args [0]访问第一个参数。                   |
+| 参数名称 | 推断上下文 | 任何方法参数的名称。如果出于某种原因，这些名称不可用（例如，由于编译字节代码中没有调试信息），则也可以使用\#a<#arg>语法代表单个参数，其中<#arg>代表参数索引（从0开始）。 | \#blEvent或＃a0（您还可以使用\#p0或\#p<#arg>参数符号作为别名） |
+
+请注意，即使您的方法签名实际上是指已发布的事件，＃root.event使您可以访问任意事件。如果您需要因处理另一个事件而发布事件，则可以更改方法签名以返回应发布的事件，如以下示例所示：
+
+```java
+@EventListener
+public ListUpdateEvent handleBlockedListEvent(BlockedListEvent event) {
+    // notify appropriate parties via notificationAddress and
+    // then publish a ListUpdateEvent...
+}
+```
+
+> :information_source:[异步监听器](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#context-functionality-events-async)不支持此功能
+
+此新方法为上述方法处理的每个BlockedListEvent发布了一个新的ListUpdateEvent。如果您需要发布多个事件，则可以返回事件集合。
+
+**异步监听器**
+
+如果您希望特定的监听器异步处理事件，则可以重复使用常规@Async支持。以下示例显示了如何做：
+
+```java
+@EventListener
+@Async
+public void processBlockedListEvent(BlockedListEvent event) {
+    // BlockedListEvent is processed in a separate thread
+}
+```
+
+使用异步事件时，请注意以下限制：
+
+- 如果异步事件侦听器抛出异常，则不会向调用者传播。有关更多详细信息，请参见AsyncUncaughtExceptionHandler。
+- 异步事件侦听器方法无法通过返回值来发布后续事件。如果您需要作为处理结果发布另一个事件，请注入[`ApplicationEventPublisher`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/aop/interceptor/AsyncUncaughtExceptionHandler.html)手动发布该事件。
+
+**有序监听器**
+
+如果您需要在另一个监听器之前调用一个监听器，则可以将@Order添加到方法声明中，如以下示例所示：
+
+```java
+@EventListener
+@Order(42)
+public void processBlockedListEvent(BlockedListEvent event) {
+    // notify appropriate parties via notificationAddress...
+}
+```
+
+**泛型事件**
+
+您也可以使用泛型进一步定义事件的结构。考虑使用EntityCreatedEvent\<T\>，其中T是创建的实际实体的类型。例如，您可以创建以下监听器定义以仅接收Person的EntityCreatedEvent：
+
+```java
+@EventListener
+public void onPersonCreated(EntityCreatedEvent<Person> event) {
+    // ...
+}
+```
+
+由于类型擦除，只有在事件被解析的情况下才能解决事件监听过滤器的泛型参数(类似`class PersonCreatedEvent extends EntityCreatedEvent<Person> { … }`)。在某些情况下，如果所有事件都遵循相同的结构，这可能会变得非常啰嗦（如前一个示例中的事件一样）。在这种情况下，您可以实现ResolvableTypeProvider，以指导框架涵盖运行时环境所提供的内容。以下事件显示了如何这样做：
+
+```java
+public class EntityCreatedEvent<T> extends ApplicationEvent implements ResolvableTypeProvider {
+
+    public EntityCreatedEvent(T entity) {
+        super(entity);
+    }
+
+    @Override
+    public ResolvableType getResolvableType() {
+        return ResolvableType.forClassWithGenerics(getClass(), ResolvableType.forInstance(getSource()));
+    }
+}
+```
+
+> :information_source:这不仅适用于ApplicationEvent，还适用于您作为事件发送的任何任意对象。
+
+### 1.15.3. 方便地访问低层资源
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
